styles.css
/*------------------------------------------------------

			Main CSS

--------------------------------------------------------*/


@import url(https://fonts.googleapis.com/css?family=Poiret+One);
@import url(https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,700);

body {
margin: 0;
padding: 0;
font-family: 'Quicksand', sans-serif;
}

h2 {
	margin: 0;
}

a {
	text-decoration: none;
}

/*------- Header Banner --------*/

header {
	width: 100%;
	padding: 20px 10px;
	box-sizing: border-box;
}

header h1, header h2 {
	font-family: 'Poiret One', sans-serif;
}

header h1 {
	margin: 0;
	font-size: 2.2em;
	text-transform: uppercase;
}

.logo {
	float: left;
	padding-left: 5%;
	width: 30%;
}


/*------- Top Header Navigation --------*/

header ul {
	padding-top: 10px;
	text-align: right;
	float: left;
}
 
header ul li{
	list-style: none;
	display: inline;
	padding: 3px;
}

header a {
	text-transform: uppercase;
	padding: 5px;
	text-decoration: none;
}





/*---------- Projects ---------------- */

.projects {
	float: right;
	width: 70%;
}

.projects-container {
	padding: 20px 10px 10px 10px;
	margin-bottom: 10px;
}

.projects h3 {
	margin-bottom: 10px;
}

.embed {
	padding-bottom: 35px;
	border-bottom: 1px dashed #ccc;
}

iframe {
	border: 0;
}

/*---------- SIDEBAR ---------------- */

.heading-block {
	padding: 5px 5px;
	font-weight: 200;
	margin: 0 0 10px 0;
}

.sidebar {
	float: left;
	width: 30%;
	padding: 20px 10px 10px 10px;
}

.sidebar a {
	opacity: 0.8;
	transition: opacity .5s;
}

.sidebar a:hover {
	opacity: 1;
}

.sidebar-boxes {
	padding-bottom: 10px;
}

.sidebar-boxes ul{
	padding: 0;
	margin: 0;
	list-style: none;
}

.sidebar-boxes li {
	margin-bottom: 10px;
}

.content {
	padding: 5px 10px;
	border: 1px dashed #eee;
}

.content h2 {
	font-size:1.9em;
}

.status {
	width: 100%;
	box-sizing: border-box;
}

.progress-bar {
	display: inline-block;
	width: 50%;
	height: 15px;
}


.forced-width { 
	width: 40%;
	display: inline-block;
	padding-bottom: 10px;
}

.sub-text{
	font-size: .85em;
	font-weight: bold;
}

.footer {
	text-align: center;
	padding: 20px;
	opacity: .7;
	margin: 0;
}

.footer a:hover {
	font-weight: bold;
}

.clear {
	clear: both;
}



/*---------- progress bar % ---------------- */

.progress-bar, .html, .css, .javascript, .php, .bootstrap, .wordpress {
	border-radius: 3px;	
}

.html, .css, .javascript, .php, .bootstrap, .wordpress {
	height: 100%;
}

.html {
	width: 80%;
}

.css {
	width: 80%;
}

.javascript {
	width: 40%;
}

.php {
	width: 20%;
}

.wordpress {
	width: 20%;
}

.bootstrap {
	width: 20%;
}



/*---------- Border Box ---------------- */

.sidebar, .projects {
	box-sizing: border-box;
}

